--- a/index.html
+++ b/index.html
@@ -48,24 +48,26 @@
             </li>
         </ul>
         <h2>Our team</h2>
-        <ul>^
+        <ul>
             <li>
-                <img src="/images/img-3.jpg" alt="Mark Guerrero" width="260" height="264">
+                <a href="./index.html">
+                <img src="./images/img-3.jpg" alt="Mark Guerrero" width="260" height="264">
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p>
+                </a>
             </li>
             <li>
-                <img src="/images/img-2.jpg" alt="Tom Ford" width="260" height="264">
+                <img src="./images/img-2.jpg" alt="Tom Ford" width="260" height="264">
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="/images/img-1.jpg" alt="Camila Garcia" width="260" height="264">
+                <img src="./images/img-1.jpg" alt="Camila Garcia" width="260" height="264">
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="/images/img-4.jpg" alt="Daniel Wilson" width="260" height="264">
+                <img src="./images/img-4.jpg" alt="Daniel Wilson" width="260" height="264">
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
             </li>
