--- a/index.html
+++ b/index.html
@@ -9,72 +9,87 @@
 
 <body>
     <header>
-        <a href="">WEBSTUDIO</a>
-
         <nav>
+        <a href="./index.html">WebStudio</a>
+
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Contacts</a></li>
             </ul>
         </nav>
-        <a href="">info@devstudio.com</a>
-        <a href="">+11 (000) 111-11-11</a>
+        <address>
+            <ul>
+                <li>
+        <a href="malito:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
+        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        </li>
+        </ul>
+        </address>
     </header>
     <main>
+        <section>
         <h1>Effective Solutions
             for Your Business</h1>
         <button type="button">Order Service</button>
+        </section>
+        <section>
         <ul>
             <li>
-                <h2>Strategy</h2>
+                <h3>Strategy</h3>
                 <p>Our goal is to identify the business
                     problem to walk away with the perfect and creative solution.</p>
             </li>
             <li>
-                <h2>Punctuality</h2>
+                <h3>Punctuality</h3>
                 <p>Bring the key message to the brand's audience for the best price within the shortest possible time.
                 </p>
             </li>
             <li>
-                <h2>Diligence</h2>
+                <h3>Diligence</h3>
                 <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
                     risk.</p>
             </li>
             <li>
-                <h2>Technologies</h2>
+                <h3>Technologies</h3>
                 <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
                 </p>
             </li>
         </ul>
+        </section>
+
+        <section>
         <h2>Our team</h2>
         <ul>
             <li>
                 <a href="./index.html">
-                <img src="./images/img-3.jpg" alt="Mark Guerrero" width="260" height="264">
+                <img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" height="260">
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p>
                 </a>
             </li>
             <li>
-                <img src="./images/img-2.jpg" alt="Tom Ford" width="260" height="264">
+                <img src="./images/img-2.jpg" alt="Tom Ford" width="264" height="260">
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="./images/img-1.jpg" alt="Camila Garcia" width="260" height="264">
+                <img src="./images/img-1.jpg" alt="Camila Garcia" width="264" height="260">
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="./images/img-4.jpg" alt="Daniel Wilson" width="260" height="264">
+                <img src="./images/img-4.jpg" alt="Daniel Wilson" width="264" height="260">
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
             </li>
         </ul>
+        </section>
     </main>
     <footer>
-        <a href="">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
