--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <address>
             <ul>
                 <li>
-        <a href="malito:info@devstudio.com">info@devstudio.com</a>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
         <a href="tel:+110001111111">+11 (000) 111-11-11</a>
@@ -36,6 +36,7 @@
         <button type="button">Order Service</button>
         </section>
         <section>
+            <h2>content</h2>
         <ul>
             <li>
                 <h3>Strategy</h3>
@@ -61,7 +62,7 @@
         </section>
 
         <section>
-        <h2>Our team</h2>
+        <h2>Our Team</h2>
         <ul>
             <li>
                 <a href="./index.html">
